--- a/main.css
+++ b/main.css
@@ -5,5 +5,5 @@ section#gitKomandos > ul {
   background-color: rgb(97, 160, 212);
   border-radius: 10px;
   color: rgba(255, 255, 255, 0.856);
-  font-size: 1.5rem
+  font-size: 1.5rem;
 }
