--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 section#gitKomandos > ul {
   max-width: 80%;
-  margin: 30px auto;
+  margin: 30px ;
   padding: 30px;
   background-color: rgb(97, 160, 212);
   border-radius: 10px;
