--- a/main.css
+++ b/main.css
@@ -15,3 +15,6 @@ section#gitKomandos li {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.3;
 }
+section#gitKomandos li:hover {
+  background-color: beige;
+}
